// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instrument details panel component gracefully handles InstrumentScientists without Users 1`] = `
<div
  id="details-panel"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    scrollButtons="auto"
    value="details"
    variant="scrollable"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-users-panel"
      id="instrument-users-tab"
      label="instruments.details.instrument_scientists.label"
      value="users"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-1"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="h6"
        >
          <b>
            Test Instrument
          </b>
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-2"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.description
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            An instrument purely for testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.type
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.url
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            <WithStyles(ForwardRef(Link))
              href="www.example.com"
            >
              www.example.com
            </WithStyles(ForwardRef(Link))>
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
  <div
    aria-labelledby="instrument-users-tab"
    hidden={true}
    id="instrument-users-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-1"
      container={true}
      direction="column"
    />
  </div>
</div>
`;

exports[`Instrument details panel component renders correctly 1`] = `
<div
  id="details-panel"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    scrollButtons="auto"
    value="details"
    variant="scrollable"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-1"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="h6"
        >
          <b>
            Test Instrument
          </b>
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-2"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.description
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            An instrument purely for testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.type
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.url
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            <WithStyles(ForwardRef(Link))
              href="www.example.com"
            >
              www.example.com
            </WithStyles(ForwardRef(Link))>
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;

exports[`Instrument details panel component renders users tab when present in the data 1`] = `
<div
  id="details-panel"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    scrollButtons="auto"
    value="details"
    variant="scrollable"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-users-panel"
      id="instrument-users-tab"
      label="instruments.details.instrument_scientists.label"
      value="users"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-1"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="h6"
        >
          <b>
            Test Instrument
          </b>
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-2"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.description
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            An instrument purely for testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.type
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            testing
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.url
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            <WithStyles(ForwardRef(Link))
              href="www.example.com"
            >
              www.example.com
            </WithStyles(ForwardRef(Link))>
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
  <div
    aria-labelledby="instrument-users-tab"
    hidden={true}
    id="instrument-users-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-1"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="5"
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.instrument_scientists.name
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            Louise Davies
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="10"
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.instrument_scientists.name
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            Louise
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;
